backups/argocd-ingress-20250919-112333.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: argocd
      meta.helm.sh/release-namespace: argocd
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    creationTimestamp: "2025-09-13T23:32:52Z"
    generation: 1
    labels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/part-of: argocd
      app.kubernetes.io/version: v3.1.5
      helm.sh/chart: argo-cd-8.3.7
    name: argocd-server
    namespace: argocd
    resourceVersion: "222310"
    uid: 2eb14118-ddaf-41f0-92cf-387cd0b33b39
  spec:
    ingressClassName: nginx
    rules:
    - host: argocd.test.com
      http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                number: 443
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - argocd.test.com
      secretName: argocd-server-tls
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
